--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,6 +22,7 @@
     "noFallthroughCasesInSwitch": true,
     "paths": {
       "@huckleberry/extension/*": ["apps/huckleberry-extension/src/*"],
+      "@vscode-copilot-huckleberry/*": ["apps/huckleberry-extension/src/*"],
       "@huckleberry/shared/*": ["shared/*"]
     }
   },
