--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "build-extension",
       "type": "shell",
-      "command": "pnpm exec nx build huckleberry-extension",
+      "command": "pnpm exec nx build vscode-copilot-huckleberry",
       "group": {
         "kind": "build",
         "isDefault": true
