--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "build": "nx build",
     "build:all": "nx run-many --target=build --all",
-    "build:extension": "nx build huckleberry-extension",
-    "watch:extension": "nx build huckleberry-extension --watch",
-    "package:extension": "cd apps/huckleberry-extension && npx vsce package --no-dependencies",
+    "build:extension": "nx build vscode-copilot-huckleberry",
     "build:package:extension": "pnpm run build:extension && pnpm run package:extension",
-    "test:extension": "nx test huckleberry-extension",
-    "serve:demo": "nx serve demo-site",
+    "build": "nx build",
     "clean:extension": "nx reset && rm -rf apps/huckleberry-extension/dist",
-    "prepare": "husky"
+    "package:extension": "cd apps/huckleberry-extension && npx vsce package --no-dependencies",
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "husky",
+    "start:docs": "cd apps/huckleberry-docs && npx docusaurus start",
+    "test:extension": "nx test vscode-copilot-huckleberry",
+    "watch:extension": "nx build vscode-copilot-huckleberry --watch"
   },
   "private": true,
   "dependencies": {
