--- a/apps/huckleberry-extension/package.json
+++ b/apps/huckleberry-extension/package.json
@@ -15,7 +15,9 @@
     "node": "^22.0.0"
   },
   "categories": [
-    "Other"
+    "AI",
+    "Chat",
+    "Machine Learning"
   ],
   "tags": [
     "chat-participant"
