--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,6 +71,26 @@ jobs:
           VERSION=$(node -p "require('./apps/huckleberry-extension/package.json').version")
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Package version: $VERSION"
+          
+      - name: Update Root Package.json Version
+        if: ${{ github.event.inputs.dryRun != 'true' }}
+        run: |
+          # Get the version from extension's package.json
+          VERSION=$(node -p "require('./apps/huckleberry-extension/package.json').version")
+          
+          # Update root package.json version
+          node -e "
+            const fs = require('fs');
+            const packageJson = JSON.parse(fs.readFileSync('./package.json', 'utf8'));
+            packageJson.version = '$VERSION';
+            fs.writeFileSync('./package.json', JSON.stringify(packageJson, null, 2) + '\n');
+            console.log('Updated root package.json to version $VERSION');
+          "
+          
+          # Commit the updated package.json
+          git add package.json
+          git commit -m "chore(release): sync root package version to $VERSION" || echo "No changes to commit"
+          git push origin HEAD:${GITHUB_REF#refs/heads/}
 
       - name: Package VS Code Extension
         if: ${{ github.event.inputs.dryRun != 'true' }}
