feat(docs): add new blog post on balancing deterministic logic and LLMs feat(docs): update tags with architecture and LLM categories fix(chat): comment out notification message for chat participant refresh docs(tests): correct checklist items for task suggestions and help command

--- a/apps/huckleberry-docs/blog/tags.yml
+++ b/apps/huckleberry-docs/blog/tags.yml
@@ -62,3 +62,13 @@ productivity:
   label: Productivity
   permalink: /productivity
   description: Tools, techniques and approaches for improving developer productivity
+
+architecture:
+  label: Architecture
+  permalink: /architecture
+  description: Software architecture, design patterns, and structural decisions in development
+
+llm:
+  label: LLM
+  permalink: /llm
+  description: Large Language Models and their applications in software development
