docs: update contributor recognition and add new tags for documentation

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -13,7 +13,7 @@
       "name": "CastleW",
       "avatar_url": "https://avatars.githubusercontent.com/u/22619438?v=4",
       "profile": "https://github.com/CastleW",
-      "contributions": ["bug"]
+      "contributions": ["bug", "ideas"]
     }
   ],
   "contributorsPerLine": 7,
